[package]
name = "departures-board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.2.1"
rust-config = { git = "https://github.com/ajpauwels/rust-config.git", rev = "f5d30659eba5cbcf57941414ddc79a19dfcf1110" }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread"] }
warp = "0.3.2"
